--- a/bin/config/stylesheets/base.qss
+++ b/bin/config/stylesheets/base.qss
@@ -21,5 +21,7 @@ QPushButton:hover
 
 QPushButton:pressed
 {
-    background-color: rgba(120, 120, 180, 75);
+    background-color: rgba(130, 130, 195, 75);
+    border-width: 1px;
+    font-size: 14px
 }
